[package]
name = "thread-amount"
version = "0.1.3"
edition = "2021"
description = "Get the amount of threads in the current process"
keywords = ["thread", "amount", "process", "number", "current"]
categories = ["os", "os::windows-apis", "os::unix-apis"]
repository = "https://github.com/jzeuzs/thread-amount"
documentation = "https://docs.rs/thread-amount"
authors = ["j3z <mail@j3z.dev>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
field-offset = "0.3.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.4.1"
