[package]
name = "thread-amount"
version = "0.2.2"
edition = "2024"
description = "Get the amount of threads in the current process"
keywords = ["thread", "amount", "process", "number", "current"]
categories = ["os", "os::windows-apis", "os::unix-apis"]
repository = "https://github.com/jzeuzs/thread-amount"
documentation = "https://docs.rs/thread-amount"
authors = ["j3z <mail@j3z.dev>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.6.0"

[target.'cfg(any(target_os = "freebsd", target_os = "linux"))'.dependencies]
libc = "0.2.177"
